Add Try Catch